Fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -59,15 +59,6 @@ a {
   color: rgb(118, 114, 111);
 }
 
-.mobile-menu {
-  background-image: url('./assets/images/massage6.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-}
-
 main {
   margin: 0;
 }
